# oryza-ai-box

./: .gitignore  AI_BOX_PROJECT_PLAN.md  Device.md  Makefile  README.md  REAL_WORLD_TESTING_PLAN.md  TODO.md  WEEK5_MODEL_OPTIMIZATION_PLAN.md  WEEK6_INTEGRATION_TESTING_PLAN.md  docker-compose.production.yml  docker-compose.yml  pyproject.toml  run_model_optimization.py  start_real_world_testing.py  test_real_world_simple.py
.github/workflows/: ci.yml
ai_models/: __init__.py
ai_models/common/: __init__.py  base_model.py  inference_result.py  model_config.py  model_manager.py
ai_models/human_analysis/: __init__.py  behavior_analyzer.py  face_detector.py  face_recognizer.py  person_detector.py
ai_models/vehicle_analysis/: __init__.py  license_plate_ocr.py  traffic_analyzer.py  vehicle_classifier.py  vehicle_detector.py
config/: api_specification.yaml  database_schema.sql  env.example  microservices_architecture.md  production.env
demo_optimized_models/: DemoModel_hailo.hef  DemoModel_rknn.rknn
deployment/docker/: Dockerfile.api-gateway  Dockerfile.base  Dockerfile.data-manager  Dockerfile.model-server
deployment/monitoring/: prometheus.yml
deployment/nginx/: nginx.conf
deployment/scripts/: build_images.sh  deploy.sh  health_check.sh
oryza_ai_box/: __init__.py
oryza_ai_box/core/: __init__.py
services/api_gateway/: __init__.py  main.py
services/data_manager/: __init__.py  main.py
services/model_server/: __init__.py  main.py
tests/: __init__.py  test_ai_infrastructure.py  test_basic.py  test_behavior_analysis_real.py  test_behavior_analysis_simple.py  test_behavior_analysis_training.py  test_face_detection.py  test_face_recognition.py  test_face_recognition_simple.py  test_license_plate_ocr_real.py  test_license_plate_ocr_simple.py  test_person_detection.py  test_person_detection_simple.py  test_traffic_analytics_simple.py  test_vehicle_classification_real.py  test_vehicle_classification_simple.py  test_vehicle_detection_real.py  test_vehicle_detection_simple.py  test_vehicle_pipeline_final.py  test_vehicle_pipeline_integration.py  test_vehicle_pipeline_real.py  test_yolo_vehicle_detection.py
tools/: benchmark_models.py  camera_test_suite.py  model_quantizer.py  optimization_analyzer.py  performance_monitor.py  platform_optimizer.py  simple_camera_test.py  test_environment.py
